objects/TransactionJournal.object
<CustomObject>
    <fields>
        <fullName>ActivityCategory__c</fullName>
        <label>Activity Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActivityCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityName__c</fullName>
        <label>Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <label>Partner Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voucher Definition</label>
        <referenceTo>VoucherDefinition</referenceTo>
        <relationshipLabel>Transaction Journals</relationshipLabel>
        <relationshipName>Transaction_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AK_TX</fullName>
        <columns>Name</columns>
        <columns>ActivityDate</columns>
        <columns>ExternalTransactionNumber</columns>
        <columns>RebateMember</columns>
        <columns>JournalDate</columns>
        <columns>TransactionAmount</columns>
        <columns>Product</columns>
        <filterScope>Everything</filterScope>
        <label>All Transaction Journals</label>
    </listViews>
</CustomObject>